
   LatLong class
      1) Removed implicit conversion operator to that returned a double
         precision value.
      2) Added new method called 'getValue()' which returns the value of the
         LatLong instance.

   Number class
      1) Methods associated with processing of Boolean values have been removed,
         please use the Boolean class instead

   String class
      1) Removal of 'virtual' from several methods that don't need it. String is a
         fully defined concrete class, so ideally, it should not serve as a base
         class to something else.
      2) The method 'getString' has been renamed to 'c_str' per discussion above.
      3) Removed method 'getCopyString' which allocated a new character array and
         copied the internal contents of the String object into it.  It returned
         a char* (character pointer) back to callee.  While seemingly useful, this
         method was almost never used.  As the move towards using std::string
         progresses, this method becomes less useful (std::string already provides
         this functionality).

         String x("hello");
         std::string y = x->c_str();   // properly copies the char*-based string

   Table class
      1) Slot parameter 'extrapolate' now accepts a Boolean

   Timer class
      1) Slot parameter 'active' now accepts a Boolean

--------------------------------------------------------------------------------

--------------------------------------------------------------------------------
recorder library (mixr_recorder)

   DataRecorder class
      1) Slot parameters 'eventName' and 'application' now accept an Identifier

   PrintSelected class
      1) Slot parameter 'timeOnly' now accepts a Boolean

   NetInput class
      1) Slot parameter 'noWait' now accepts a Boolean

   NetOutput class
      1) Slot parameter 'noWait' now accepts a Boolean

   TabPrinter class
      1) Slot parameter 'msgHdrOptn' now accepts an Identifier
